# ML-Automation

./: .gitignore  README.md  autogluon_tabular_predictor.py  fastai_image_classifier.py  huggingface_sentiment_analysis.py  main.py  mlflow_experiment_tracking.py  neuralprophet_time_series_forecast.py  optuna_hyperparam_tuning.py  pycaret_model_comparison.py  pyproject.toml
data/: data.csv  time_series_data.csv
src/: autogluon_tabular_predictor.py  fastai_image_classifier.py  huggingface_sentiment_analysis.py  mlflow_experiment_tracking.py  neuralprophet_time_series_forecast.py  optuna_hyperparam_tuning.py  optuna_with_pruner.py  pycaret_model_comparison.py  your_dataset.csv
